fixing burger nav on mobile OpenClassrooms-Student-Center#5

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -82,7 +82,9 @@ p {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -92,6 +94,11 @@ p {
     float: none;
     display: block;
     text-align: left;
+  }
+  .main-navbar_element {
+    position: relative;
+    right: 40px;
+    text-align: right;
   }
 }
 
